kubernetes/kube-deploy-template/component/cloudflare/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cloudflare
  namespace: cloudflare
  annotations:
    cert-manager.io/cluster-issuer: self-signed-ca-issuer
spec:
  gatewayClassName: cloudflare
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.labsonline.ca" # replace accordingly
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: default-gw-cert
